<resources>
    <string name="app_name">Todo App</string>
    <string name="edit_title">Title</string>
    <string name="edit_description">Description</string>
    <string name="edit_date">Date</string>
    <string name="edit_priority">Priority</string>
    <string name="edit_high">High</string>
    <string name="edit_medium">Medium</string>
    <string name="edit_low">Low</string>
    <string name="edit_save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alert_cancel">Do you want to return to main screen?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="welcome">Welcome to Todo App</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="login">Login</string>

    <string name="login_failed">Login Failed</string>
    <string name="usernameerror">Enter a valid username</string>
    <string name="passworderror">Enter a valid password</string>
    <string name="not_registered_yet">Not Registered Yet?</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="checkbox">CheckBox</string>
    <string name="edit_todo">Edit Todo</string>
    <string name="registered_users">Registered Users</string>
    <string name="delete_completed">Delete Completed</string>
    <string name="delete_all">Delete All</string>
    <string name="log_out">Log Out</string>
    <string name="profile">Profile</string>
    <string name="back">Back</string>
</resources>