<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/absbg5"
    tools:context=".activity_register">

  <TextView
      android:id="@+id/actLogin_labelNotLoggedIn2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="100dp"
      android:layout_marginBottom="44dp"
      android:fontFamily="@font/montserrat"
      android:text="@string/not_registered_yet"
      android:textColor="#000000"
      android:textSize="14sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/actLogin_btnRegister2"
      android:layout_width="199dp"
      android:layout_height="61dp"
      android:layout_marginTop="68dp"
      android:background="#00FFFFFF"
      android:fontFamily="@font/monoton"
      android:text="@string/sign_up"
      android:textColor="#FFFFFF"
      android:textSize="24sp"
      android:textStyle="bold"
      app:backgroundTint="#00FFFFFF"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/activityRegister_txtUsername"
      android:layout_width="330dp"
      android:layout_height="40dp"
      android:layout_marginTop="16dp"
      android:autofillHints=""
      android:background="#E6FFFFFF"
      android:fontFamily="@font/montserrat"
      android:gravity="center"
      android:hint="@string/username"
      android:inputType="text"
      android:paddingStart="5sp"
      android:paddingLeft="5sp"
      android:paddingTop="2sp"
      android:paddingEnd="5sp"
      android:paddingRight="5sp"
      android:paddingBottom="2sp"
      android:textColor="#000000"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="@+id/activityRegister_txtFullName"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/activityRegister_txtFullName"
      app:layout_constraintTop_toBottomOf="@+id/activityRegister_txtFullName" />

  <EditText
      android:id="@+id/activityRegister_txtFullName"
      android:layout_width="330dp"
      android:layout_height="40dp"
      android:layout_marginTop="24dp"
      android:autofillHints=""
      android:background="#E6FFFFFF"
      android:fontFamily="@font/montserrat"
      android:gravity="center"
      android:hint="@string/full_name"
      android:inputType="textPersonName"
      android:paddingStart="5sp"
      android:paddingLeft="5sp"
      android:paddingTop="2sp"
      android:paddingEnd="5sp"
      android:paddingRight="5sp"
      android:paddingBottom="2sp"
      android:textColor="#000000"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="@+id/imageView4"
      app:layout_constraintStart_toStartOf="@+id/imageView4"
      app:layout_constraintTop_toBottomOf="@+id/imageView4" />

  <EditText
      android:id="@+id/activityRegister_txtPassword"
      android:layout_width="330dp"
      android:layout_height="40dp"
      android:layout_marginTop="12dp"
      android:autofillHints=""
      android:background="#E6FFFFFF"
      android:fontFamily="@font/montserrat"
      android:gravity="center"
      android:hint="@string/password"
      android:inputType="textPassword"
      android:paddingStart="5sp"
      android:paddingLeft="5sp"
      android:paddingTop="2sp"
      android:paddingEnd="5sp"
      android:paddingRight="5sp"
      android:paddingBottom="2sp"
      android:textColor="#000000"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="@+id/activityRegister_txtUsername"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/activityRegister_txtUsername"
      app:layout_constraintTop_toBottomOf="@+id/activityRegister_txtUsername" />

  <EditText
      android:id="@+id/activityRegister_txtConfirmPassword"
      android:layout_width="330dp"
      android:layout_height="40dp"
      android:layout_marginTop="12dp"
      android:autofillHints=""
      android:background="#E6FFFFFF"
      android:fontFamily="@font/montserrat"
      android:gravity="center"
      android:hint="@string/confirm_password"
      android:inputType="textPassword"
      android:paddingStart="5sp"
      android:paddingLeft="5sp"
      android:paddingTop="2sp"
      android:paddingEnd="5sp"
      android:paddingRight="5sp"
      android:paddingBottom="2sp"
      android:textColor="#000000"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="@+id/activityRegister_txtPassword"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="@+id/activityRegister_txtPassword"
      app:layout_constraintTop_toBottomOf="@+id/activityRegister_txtPassword" />

  <ImageView
      android:id="@+id/imageView4"
      android:layout_width="170dp"
      android:layout_height="111dp"
      app:layout_constraintEnd_toEndOf="@+id/actLogin_btnRegister2"
      app:layout_constraintStart_toStartOf="@+id/actLogin_btnRegister2"
      app:layout_constraintTop_toBottomOf="@+id/actLogin_btnRegister2"
      app:srcCompat="@drawable/registerlogo"
      android:contentDescription="@string/todo" />

  <Button
      android:id="@+id/actRegister_btnSignUp"
      android:layout_width="185dp"
      android:layout_height="53dp"
      android:layout_marginTop="36dp"
      android:fontFamily="@font/aclonica"
      android:text="@string/sign_up"
      android:textStyle="bold"
      app:backgroundTint="#000000"
      app:cornerRadius="20dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/activityRegister_txtConfirmPassword" />

  <Button
      android:id="@+id/actRegister_btnLogin"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="#00FFFFFF"
      android:fontFamily="@font/montserrat_subrayada"
      android:text="@string/log_in"
      android:textColor="#2962FF"
      android:textStyle="bold"
      app:backgroundTint="#00FFFFFF"
      app:layout_constraintBottom_toBottomOf="@+id/actLogin_labelNotLoggedIn2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toEndOf="@+id/actLogin_labelNotLoggedIn2"
      app:layout_constraintTop_toTopOf="@+id/actLogin_labelNotLoggedIn2"
      app:layout_constraintVertical_bias="0.576" />
</androidx.constraintlayout.widget.ConstraintLayout>